2022-09-12T08:32:59Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3035785441
* notice: last 14d: unq all: 11 31
* notice: prev accum: outdated-unq outdated-all / unq all: 305 481 / 327 512
* notice: next accum: outdated-unq outdated-all / unq all: 305 481 / 328 512
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-29 2022-09-12]

2022-09-11T16:32:35Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3032541065
* notice: last 14d: unq all: 11 31
* notice: prev accum: outdated-unq outdated-all / unq all: 304 480 / 327 511
* notice: next accum: outdated-unq outdated-all / unq all: 305 481 / 327 512
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2022-08-28] / [2022-09-11]

2022-09-11T08:28:16Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3031122965
* notice: last 14d: unq all: 11 31
* notice: prev accum: outdated-unq outdated-all / unq all: 304 480 / 325 509
* notice: next accum: outdated-unq outdated-all / unq all: 304 480 / 327 511
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-11]

2022-09-11T02:37:07Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3030257170
* notice: last 14d: unq all: 11 29
* notice: prev accum: outdated-unq outdated-all / unq all: 303 477 / 325 506
* notice: next accum: outdated-unq outdated-all / unq all: 304 480 / 325 509
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-08-27] / [2022-09-10]

2022-09-10T16:32:24Z: