@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-12T08:32:59Z",
-  "count_outdated" : 481,
-  "uniques_outdated" : 305,
-  "count" : 512,
+  "timestamp" : "2022-09-13T02:36:20Z",
+  "count_outdated" : 483,
+  "uniques_outdated" : 306,
+  "count" : 514,
   "uniques" : 328,
   "clones" : [
-    {
-      "timestamp": "2022-08-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-30T00:00:00Z",
       "count": 1,
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-09-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
