@@ -3,11 +3,6 @@
   "uniques": 11,
   "clones": [
     {
-      "timestamp": "2022-08-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-08-30T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -54,7 +49,7 @@
     },
     {
       "timestamp": "2022-09-12T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
