@@ -1,3 +1,11 @@
+2022-09-13T02:36:20Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041976045
+* notice: last 14d: unq all: 11 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 305 481 / 328 512
+* notice: next accum: outdated-unq outdated-all / unq all: 306 483 / 328 514
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-08-29] / [2022-09-12]
+
 2022-09-12T08:32:59Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3035785441
 * notice: last 14d: unq all: 11 31
